<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/margin_small"
            android:text="@string/tv_about_info"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorGreybg"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreybg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_goto_sunnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sunet"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_goto_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_copyright"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright_time"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/about_copyright_reserved"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>