<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:transitionName="shareView">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/clp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="10dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed">

                <ImageView
                    android:id="@+id/detail_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bottom_black_bg_selector"/>

                <TextView
                    android:id="@+id/detail_bar_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.tencent.smtt.sdk.WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:overScrollMode="never"
                android:scrollbars="vertical"/>

            <!--<include layout="@layout/view_progress"/>-->
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/ll_detail_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_gravity="bottom"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/tv_detail_bottom_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_small"
                android:drawableTop="@mipmap/ic_daily_like"
                android:text="@string/detail_bottom_like"
                android:textColor="@color/news_read"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_detail_bottom_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_small"
                android:drawableTop="@mipmap/ic_daily_comment"
                android:text="@string/detail_bottom_commit"
                android:textColor="@color/news_read"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_detail_bottom_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/ic_daily_share"
                android:text="@string/detail_bottom_share"
                android:textColor="@color/news_read"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="top"
            android:background="@color/colorText"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:src="@drawable/fab_collection_selector"
        app:elevation="@dimen/margin_medium"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="@dimen/margin_medium_large"/>
</android.support.design.widget.CoordinatorLayout>